# e_fish

./: .gitignore  pyproject.toml
FORTRAN/: second_harmonic_generation  second_harmonic_generation.f90  shg.f90  ssc.f90  stud_stat_calc  stud_stat_calc.f90
e_fish/: for_compiler.py  load.py  plot.py  signals.py  time.py  transmitted.py
scripts/: run.py
