[tool.poetry]
name = "e-fish"
version = "0.1.0"
description = ""
authors = ["Samuel Hoyos <samuel.hoyos@udea.edu.co>"]
readme = "README.md"
packages = [{include = "e_fish"}]

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
tqdm = "^4.66.5"
jupyter = "^1.1.1"
black = "^24.8.0"
pyarrow = "^17.0.0"
diskcache = "^5.6.3"
matplotlib = "^3.9.2"
joblib = "^1.4.2"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
